k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
        - name: paymentservice
          image: karthickselvamdev/paymentservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: payments-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: paymentservice
  ports:
    - name: paymentservice
      protocol: TCP
      port: 8080
      targetPort: 8080
