k8s/ingress-frontend-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: courierfiscal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: courierwebapp-clusterip-srv
                port:
                  number: 4200
